[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "helmYAMLizer"
version = "1.0.8"
authors = [
  { name="VioletCranberry" }
]
requires-python = ">=3.7"
description = "Minimal local renderer for Helm template YAML"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/VioletCranberry/helmYAMLizer"

[project.scripts]
helmYAMLizer = "helmYAMLizer:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
